src/components/TaskItem/styles.module.css
.container {
  padding: 1rem;

  display: flex;
  justify-content: space-between;
  align-items: flex-start;

  gap: .75rem;

  border: 1px solid var(--gray-400);
  border-radius: 8px;

  list-style: none;

  background-color: var(--gray-500);
}

.container > div {
  flex: 1;
  display: flex;
}

.taskTitle {
  font-size: .875rem;
  font-weight: 400;
  color: var(--gray-100);

  margin-left: .75rem;
}

.taskTitle[data-completed=true] {
  color: var(--gray-300);
  text-decoration: line-through;
}

.deleteButton {
  width: 1.5rem;
  height: 1.5rem;

  flex-shrink: 0;

  display: flex;
  justify-content: center;
  align-items: center;

  border: none;
  border-radius: 2px;

  cursor: pointer;

  background: none;
}

.deleteButton > svg {
  fill: var(--gray-300);
}

.deleteButton:hover {
  background-color: var(--gray-400);
}

.deleteButton:hover > svg {
  fill: var(--danger);
}

